--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
 				 <artifactId>spring-boot-devtools</artifactId>
 		</dependency> 
 
+
+  <dependency>
+    <groupId>jakarta.validation</groupId>
+    <artifactId>jakarta.validation-api</artifactId>
+    <version>3.0.0</version>
+  </dependency>
 		
 	</dependencies>
 
